--- a/html/login.html
+++ b/html/login.html
@@ -16,7 +16,7 @@
 
    <div id="login" class="row text-center">
    	<img src="img/logo_symbol.png" class="full-padding">
-    	<h1 class="">Login</h1>
+    	<h1 class="padding-bottom">Login</h1>
     	<form class="loginform" action="">
     		<input type="text" placeholder="E-mail" />
     		<input type="password" placeholder="Passwort" />
