--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
-
+  <!-- Test -->
     <header>
         <div class="row">
           <div class="large-3 columns">
