- added colors - worked on compare.html - reduzed/improved scss

--- a/html/login.html
+++ b/html/login.html
@@ -20,7 +20,7 @@
     	<form class="loginform" action="">
     		<input type="text" placeholder="E-mail" />
     		<input type="password" placeholder="Passwort" />
-    		<input type="submit" class="button padding-top" id="loginbutton" value="Login">
+    		<input type="submit" class="button expand padding-top" id="loginbutton" value="Login">
     	</form>
     	<div id="loginlinks" >
     		<a href="" id="reglink">Registrieren</a>
