--- a/html/compare.html
+++ b/html/compare.html
@@ -14,67 +14,68 @@
   </head>
   <body>
  
+<div class="text-center">
+      <img src="img/logo_symbol.png" width="90px" class="half-padding">
+    </div>
+
   <div class="container">
-  
-
-     <div class="row">
-       <div class="medium-6 columns info half-padding">
-         <div class="box">
-           <div class="icon">I</div>
-           <div class="text">
-              Ausschreibung<br />
-              Auftraggeber<br />
-              Restlaufzeit<br />
-            </div>
-            <div class="value">
-              C5465259<br />
-              Max Mustermann<br />
-              2 Tage 4 Stunden<br />
-            </div>
-         </div>
-       </div>
-      
-       <div class="medium-6 columns statistic half-padding">
-         <div class="box">
-           <div class="icon">I</div>
-           <div class="text">
-              Ausschreibung<br />
-              Auftraggeber<br />
-              Restlaufzeit<br />
-            </div>
-            <div class="value">
-              C5465259<br />
-              Max Mustermann<br />
-              2 Tage 4 Stunden<br />
-            </div>
-         </div>
-       </div>
+   <div class="medium-6 columns info half-padding">
+     <div class="box">      
+       <div class="text dark-bg">
+          Ausschreibung<br />
+          Auftraggeber<br />
+          Restlaufzeit<br />
+        </div>
+        <div class="value">
+          C-5465259<br />
+          Max Mustermann<br />
+          2 Tage 4 Stunden<br />
+        </div>
      </div>
-
+   </div>
   
-    <div class="item half-margin">
+   <div class="medium-6 columns statistic half-padding">
+     <div class="box">        
+       <div class="text dark-bg">
+          Bewerber<br />
+          Ø Kosten<br />
+          Ø Bewertung <br />
+        </div>
+        <div class="value">
+          6<br />
+          2450€<br />
+          <span class="green-font">93%</span><br />
+        </div>
+     </div>
+   </div>   
+
+    <div class="sort padding-bottom">
+      <button class="sortbuttons"><a href="">1</a></button><button class="sortbuttons"><a href="">1</a></button><button class="sortbuttons"><a href="">1</a></button><button class="sortbuttons"><a href="">1</a></button>
+    </div>
+
+    <div class="item dark-bg yellow-border half-margin">
      <div class="row">
-      <div class="medium-1 columns rating">50</div>
+      <div class="medium-1 columns rating yellow-bg">80</div>
       <div class="small-6 columns name">Jon Doe</div>
-      <div class="small-4 columns price">4500 €</div>
+      <div class="small-4 columns price">3700 €</div>
       <div class="small-1 columns marker">X</div>
      </div>
     </div>
 
-    <div class="item half-margin">
+    <div class="item dark-bg orange-border half-margin">
      <div class="row">
-      <div class="medium-1 columns rating">50</div>
-      <div class="small-6 columns name">Jon Doe</div>
-      <div class="small-4 columns price">4500 €</div>
+      <div class="medium-1 columns rating orange-bg">72</div>
+      <div class="small-6 columns name">Matt Damon</div>
+      <div class="small-4 columns price">2100 €</div>
       <div class="small-1 columns marker">X</div>
      </div>
     </div>
 
-    <div class="item half-margin">
+    <div class="item dark-bg green-border half-margin">
      <div class="row">
-      <div class="medium-1 columns rating">50</div>
-      <div class="small-6 columns name">Jon Doe</div>
-      <div class="small-4 columns price">4500 €</div>
+      <div class="medium-1 columns green-bg rating">93</div>
+      <div class="small-6 columns name">Bruce Lee</div>
+      <div class="small-4 columns price">1800 €</div>
       <div class="small-1 columns marker">X</div>
      </div>
       <div class="collapsed">
@@ -89,21 +90,30 @@
       </div>
     </div>
 
-
-
-    <div class="item half-margin">
+    <div class="item dark-bg red-border half-margin">
      <div class="row">
-      <div class="medium-1 columns rating">50</div>
-      <div class="small-6 columns name">Jon Doe</div>
+      <div class="medium-1 columns red-bg rating">50</div>
+      <div class="small-6 columns name">Indiana Jones</div>
       <div class="small-4 columns price">4500 €</div>
       <div class="small-1 columns marker">X</div>
      </div>
     </div>
 
+    <div class="item dark-bg green-border half-margin">
+     <div class="row">
+      <div class="medium-1 columns green-bg rating">98</div>
+      <div class="small-6 columns name">Bruce Willis</div>
+      <div class="small-4 columns price">1340 €</div>
+      <div class="small-1 columns marker">X</div>
+     </div>
+    </div>
 
-  </div>
     
+      <div class="text-center half-padding">
+      <a href="" class="button red-bg">Ausschreibung beenden</a>
+      </div>
 
+    </div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
