--- a/html/compare.html
+++ b/html/compare.html
@@ -15,7 +15,7 @@
   <body>
  
 <div class="text-center">
-      <img src="img/logo_symbol.png" width="90px" class="half-padding">
+      <img class="logo half-padding" src="img/logo_symbol.png">
     </div>
 
   <div class="container">
