--- a/html/login.html
+++ b/html/login.html
@@ -15,7 +15,7 @@
   <body>
 
    <div id="login" class="row text-center">
-   	<img src="img/logo_symbol.png" class="full-padding">
+   	<img src="img/logo_symbol.png" class="logo half-padding">
     	<h1 class="padding-bottom">Login</h1>
     	<form class="loginform" action="">
     		<input type="text" placeholder="E-mail" />
