--- a/html/login.html
+++ b/html/login.html
@@ -14,20 +14,21 @@
   </head>
   <body>
 
-   <div id="login" class="row text-center">
-   	<img src="img/logo_symbol.png" class="logo half-padding">
-    	<h1 class="padding-bottom">Login</h1>
-    	<form class="loginform" action="">
-    		<input type="text" placeholder="E-mail" />
-    		<input type="password" placeholder="Passwort" />
-    		<input type="submit" class="button expand padding-top" id="loginbutton" value="Login">
-    	</form>
-    	<div id="loginlinks" >
-    		<a href="" id="reglink">Registrieren</a>
-    		<a href="" id="helplink">Hilfe</a>
-    	</div>
-	</div>	
-   </div> 
+   <div id="login">
+     <div class="row text-center">
+      <img src="img/logo_symbol.png" class="logo half-padding">
+      	<h1 class="padding-bottom">Login</h1>
+      	<form class="loginform" action="">
+      		<input type="text" placeholder="E-mail" />
+      		<input type="password" placeholder="Passwort" />
+      		<input type="submit" class="button expand padding-top" id="loginbutton" value="Login">
+      	</form>
+      	<div id="loginlinks" >
+      		<a href="" id="reglink">Registrieren</a>
+      		<a href="" id="helplink">Hilfe</a>
+      	</div>
+  	</div>	
+  </div> 
     
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
