--- a/html/compare.html
+++ b/html/compare.html
@@ -71,6 +71,8 @@
      </div>
     </div>
 
+
+<a class="show" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">
     <div class="item dark-bg green-border half-margin">
      <div class="row">
       <div class="medium-1 columns green-bg rating">93</div>
@@ -78,7 +80,11 @@
       <div class="small-4 columns price">1800 €</div>
       <div class="small-1 columns marker">X</div>
      </div>
-      <div class="collapsed">
+</a>
+
+<div id="spoiler" style="display:none">
+
+    <div class="collapsed">
       Lorem Ipsum...
         <div class="buttons">
           <div class="row">
@@ -89,6 +95,8 @@
         </div>
       </div>
     </div>
+
+</div>
 
     <div class="item dark-bg red-border half-margin">
      <div class="row">
