--- a/html/briefing.html
+++ b/html/briefing.html
@@ -84,7 +84,7 @@
           <!-- Step -->
           <div class="row">
             <a name="1"></a>
-            <h3 data-magellan-destination="1">1. Schritt - Allgemeines</h3>
+            <h3 data-magellan-destination="1">1. Allgemeines</h3>
 
             <div class="medium-2 columns">
               <label for="email" class="left inline">
