--- a/html/index.html
+++ b/html/index.html
@@ -97,7 +97,7 @@
       <br class="end" />
         
         <div id="main-services" class="text-center">
-        <h3 class="full-padding">So funktioniert's...</h3>
+        <h3 class="half-padding">So funktioniert's...</h3>
           <div class="row">
             <div class="large-3 columns">
               <h4>1. Briefing</h4>
@@ -138,7 +138,7 @@
         </div>
  
 
-        <div class="row margin-top">
+        <!-- <div class="row margin-top">
           <div class="large-6 columns">
             <h2 class="primary-color-font">HEADLINE</h2>
             <h3 class="orange-font">SUBLINE</h3>
@@ -152,10 +152,46 @@
 
           </div>
           <div class="large-6 columns">
-            <img src="img/home-tablets.png" alt=""/>
+            <img src="img/poster.png" id="poster-img" alt=""/>
           </div>
-        </div>
+        </div> -->
         
+<div class="row margin-top">
+  <div class="large-4 columns">
+    <ul class="pricing-table">
+      <li class="title">Bronze</li>
+      <li class="price">5€</li>
+      <li class="description">Placeholder für Beschreibung</li>
+      <li class="bullet-item">1 Feature</li>
+      <li class="bullet-item">2 Feature</li>
+      <li class="bullet-item">3 Feature</li>
+      <li class="cta-button"><a class="button" href="#">wählen</a></li>
+    </ul>    
+  </div>
+ <div class="large-4 columns">
+    <ul class="pricing-table">
+      <li class="title">Silber</li>
+      <li class="price">10€</li>
+      <li class="description">Placeholder für Beschreibung</li>
+      <li class="bullet-item">1 Feature</li>
+      <li class="bullet-item">2 Feature</li>
+      <li class="bullet-item">3 Feature</li>
+      <li class="cta-button"><a class="button" href="#">wählen</a></li>
+    </ul>    
+  </div>
+ <div class="large-4 columns">
+    <ul class="pricing-table">
+      <li class="title">Gold</li>
+      <li class="price">20€</li>
+      <li class="description">Placeholder für Beschreibung</li>
+      <li class="bullet-item">1 Feature</li>
+      <li class="bullet-item">2 Feature</li>
+      <li class="bullet-item">3 Feature</li>
+      <li class="cta-button"><a class="button" href="#">wählen</a></li>
+    </ul>    
+  </div>    
+</div>
+
         <div class="row text-center full-padding" >
           <div class="large-3 columns">
             <h5>LOGO</h5>
