--- a/html/compare.html
+++ b/html/compare.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculi - Landingpage</title>
+    <title>Calculi - Compare</title>
     <link rel="stylesheet" href="css/normalize.css" />
 
     <link href='http://fonts.googleapis.com/css?family=Lato:100,200,300,400,700' rel='stylesheet' type='text/css'>
@@ -14,114 +14,133 @@
   </head>
   <body>
  
-<div class="text-center">
-      <img class="logo half-padding" src="img/logo_symbol.png">
-    </div>
+    <header>
+      <div class="row">
+        <nav class="top-bar" data-topbar role="navigation">
+          <ul class="title-area">
+            <li class="name">
+              <a href="#"><img src="img/logo.png" class="logo" alt="caluli_logo" /></a>
+            </li>
+           <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+          </ul>
+          <section class="top-bar-section">
+            <ul class="right">
+              <li class="active"><a href="#">Start</a></li>
+              <li><a href="#">Registrieren</a></li>
+              <li><a href="#">Login</a></li>
+              <li class="has-dropdown">
+                <a href="#">Dropdown</a>
+                <ul class="dropdown">
+                  <li><a href="#">Link</a></li>
+                  <li><a href="#">Link</a></li>
+                </ul>
+              </li>
+            </ul>
+          </section>
+        </nav>
+      </div>
+      </header>
 
-  <div class="container">
-   <div class="medium-6 columns info half-padding">
-     <div class="box">      
-       <div class="text dark-bg">
-          Ausschreibung<br />
-          Auftraggeber<br />
-          Restlaufzeit<br />
+      <div class="row">
+        <div class="large-12 columns half-padding text-center">
+          <h1 id="headline">Bewerber vergleichen</h1>
+          <h2 class="subline">Die Quahl der Wahl...</h2>
         </div>
-        <div class="value">
-          C-5465259<br />
-          Max Mustermann<br />
-          2 Tage 4 Stunden<br />
+      </div>
+
+  		<div id="container-compare">
+        <div class="box">
+        	<div class="row ">   
+	           <div class="text dark-bg">
+	              Ausschreibung<br />
+	              Auftraggeber<br />
+	              Restlaufzeit<br />
+		            Bewerber<br />
+		            Ø Kosten<br />
+		            Ø Bewertung <br />
+	            </div>
+	            <div class="value">
+	              C-5465259<br />
+	              Max Mustermann<br />
+	              2 Tage 4 Stunden<br />
+		            6<br />
+		            2450€<br />
+		            <span class="green-font">93%</span><br />
+	            </div>
+	        </div>
+   
+				</div>
+
+        <div class="sort padding-top">
+          <button class="sortbuttons"><a href="">1</a></button><button class="sortbuttons"><a href="">1</a></button><button class="sortbuttons"><a href="">1</a></button><button class="sortbuttons"><a href="">1</a></button>
         </div>
-     </div>
-   </div>
+
+        <div class="item dark-bg yellow-border half-margin">
+         <div class="row">
+          <div class="medium-1 columns rating yellow-bg">80</div>
+          <div class="small-6 columns name">Jon Doe</div>
+          <div class="small-4 columns price">3700 €</div>
+          <div class="small-1 columns marker">X</div>
+         </div>
+        </div>
+
+        <div class="item dark-bg orange-border half-margin">
+         <div class="row">
+          <div class="medium-1 columns rating orange-bg">72</div>
+          <div class="small-6 columns name">Matt Damon</div>
+          <div class="small-4 columns price">2100 €</div>
+          <div class="small-1 columns marker">X</div>
+         </div>
+        </div>
+
+
+		    <a class="show" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">
+		        <div class="item dark-bg green-border half-margin">
+		         <div class="row">
+		          <div class="medium-1 columns green-bg rating">93</div>
+		          <div class="small-6 columns name">Bruce Lee</div>
+		          <div class="small-4 columns price">1800 €</div>
+		          <div class="small-1 columns marker">X</div>
+		         </div>
+		    </a>
+
+		    <div id="spoiler" style="display:none">
+		      <div class="collapsed">
+		        Lorem Ipsum...
+		          <div class="buttons">
+		            <div class="row">
+		               <div class="small-4 columns"><button>Profil</button></div>
+		               <div class="small-4 columns"><button>Kalkulation</button></div>
+		               <div class="small-4 columns"><button class="green">Auswählen</button></div>
+		             </div>
+		          </div>
+		        </div>
+		      </div>
+		    </div>
+
+        <div class="item dark-bg red-border half-margin">
+         <div class="row">
+          <div class="medium-1 columns red-bg rating">50</div>
+          <div class="small-6 columns name">Indiana Jones</div>
+          <div class="small-4 columns price">4500 €</div>
+          <div class="small-1 columns marker">X</div>
+         </div>
+        </div>
+
+        <div class="item dark-bg green-border half-margin">
+         <div class="row">
+          <div class="medium-1 columns green-bg rating">98</div>
+          <div class="small-6 columns name">Bruce Willis</div>
+          <div class="small-4 columns price">1340 €</div>
+          <div class="small-1 columns marker">X</div>
+         </div>
+        </div>
   
-   <div class="medium-6 columns statistic half-padding">
-     <div class="box">        
-       <div class="text dark-bg">
-          Bewerber<br />
-          Ø Kosten<br />
-          Ø Bewertung <br />
-        </div>
-        <div class="value">
-          6<br />
-          2450€<br />
-          <span class="green-font">93%</span><br />
-        </div>
-     </div>
-   </div>   
+	      <div class="text-center half-padding">
+	      	<a href="" class="button red-bg">Ausschreibung beenden</a>
+	      </div>
 
-    <div class="sort padding-bottom">
-      <button class="sortbuttons"><a href="">1</a></button><button class="sortbuttons"><a href="">1</a></button><button class="sortbuttons"><a href="">1</a></button><button class="sortbuttons"><a href="">1</a></button>
-    </div>
-
-    <div class="item dark-bg yellow-border half-margin">
-     <div class="row">
-      <div class="medium-1 columns rating yellow-bg">80</div>
-      <div class="small-6 columns name">Jon Doe</div>
-      <div class="small-4 columns price">3700 €</div>
-      <div class="small-1 columns marker">X</div>
-     </div>
-    </div>
-
-    <div class="item dark-bg orange-border half-margin">
-     <div class="row">
-      <div class="medium-1 columns rating orange-bg">72</div>
-      <div class="small-6 columns name">Matt Damon</div>
-      <div class="small-4 columns price">2100 €</div>
-      <div class="small-1 columns marker">X</div>
-     </div>
-    </div>
-
-
-<a class="show" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">
-    <div class="item dark-bg green-border half-margin">
-     <div class="row">
-      <div class="medium-1 columns green-bg rating">93</div>
-      <div class="small-6 columns name">Bruce Lee</div>
-      <div class="small-4 columns price">1800 €</div>
-      <div class="small-1 columns marker">X</div>
-     </div>
-</a>
-
-<div id="spoiler" style="display:none">
-
-    <div class="collapsed">
-      Lorem Ipsum...
-        <div class="buttons">
-          <div class="row">
-             <div class="small-4 columns"><button>Profil</button></div>
-             <div class="small-4 columns"><button>Kalkulation</button></div>
-             <div class="small-4 columns"><button class="green">Auswählen</button></div>
-           </div>
-        </div>
-      </div>
-    </div>
-
-</div>
-
-    <div class="item dark-bg red-border half-margin">
-     <div class="row">
-      <div class="medium-1 columns red-bg rating">50</div>
-      <div class="small-6 columns name">Indiana Jones</div>
-      <div class="small-4 columns price">4500 €</div>
-      <div class="small-1 columns marker">X</div>
-     </div>
-    </div>
-
-    <div class="item dark-bg green-border half-margin">
-     <div class="row">
-      <div class="medium-1 columns green-bg rating">98</div>
-      <div class="small-6 columns name">Bruce Willis</div>
-      <div class="small-4 columns price">1340 €</div>
-      <div class="small-1 columns marker">X</div>
-     </div>
-    </div>
-
-    
-      <div class="text-center half-padding">
-      <a href="" class="button red-bg">Ausschreibung beenden</a>
-      </div>
-
-    </div>
+  	  </div>
 
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
