--- a/html/profile.html
+++ b/html/profile.html
@@ -51,12 +51,10 @@
         <div id="profile-head" class="dark-bg">
           <div class="text-center">
             <h1>Jon Doe</h1>
-
             <div id="website">www.jondoe.at</div>
-
           </div>
 
-          <div class="row half-padding">
+          <div class="row">
             <div class="medium-3 columns picture">
               <img src="img/thumb.jpeg" alt="">
             </div>
@@ -64,15 +62,53 @@
               Ich arbeite seit 2004 als professioneller Webdesigner und habe in der Vergangenheit bereits zahlreiche Kundenprojekte erfolgreich abgewickelt. Ich habe mich auf dier Anforderungen und Bedürfnisse von NeugründerInnen & JungunternehmerInnen spezialisiert. Ihre Website gestalten ich entsprechend der modernsten Standards. Benutzerfreundlichkeit, Browserkompatibilität, Suchmaschinenoptimierung und weitgehende Barrierefreiheit sind für mich  stehts selbstverständlich. 
             </div>
           </div>
+
+         <ul class="text-center">
+           <li>X</li>
+           <li>X</li>          
+           <li>X</li>
+           <li>X</li>
+         </ul>
+
         </div>
 
         <div id="profile-body">
         <div class="row">
-          <div class="medium-4 columns ratings">
+          <div class="medium-4 columns" id="ratings">
             <h2>Bewertung</h2>
+            <div id="points">
+              <ul>
+                <li class="green-bg">9</li>
+                <li class="red-bg">3</li>
+                <li class="orange-bg">6</li>
+                <li class="yellow-bg">7</li>
+                <li class="green-bg">10</li>
+                <li class="green-bg">10</li>
+                <li class="orange-bg">6</li>
+              </ul>
+            </div>
+            <div id="categories">
+              <ul>
+                <li>Kommunikation</li>
+                <li>Geschwindikgiet</li>
+                <li>Qualität</li>
+                <li>Design</li>
+                <li>Technik</li>
+                <li>Dokumentation</li>
+                <li>Support</li>
+              </ul>
+            </div>
           </div>
-          <div class="medium-8 columns references">
+          <div class="medium-8 columns" id="references">
             <h2>Referenzen</h2>
+            <ul>
+              <li><span>2014</span><a href="">http://www.projekt.at</a></li>
+              <li><span>2014</span><a href="">http://www.projekt.at</a></li>
+              <li><span>2014</span><a href="">http://www.projekt.at</a></li>
+              <li><span>2014</span><a href="">http://www.projekt.at</a></li>
+              <li><span>2014</span><a href="">http://www.projekt.at</a></li>
+              <li><span>2014</span><a href="">http://www.projekt.at</a></li>
+            </ul>
           </div>
         </div>
         </div> 
@@ -100,13 +136,12 @@
 
         <div id="profile-comments">
           <div class="row">
-            <div class="medium-4 columns">sdf</div>
-            <div class="medium-4 columns">sdf</div>
-            
+            <div class="medium-4 columns author dark-bg text-center">
+              Autor<br />
+              <span>1.1.2013</span></div>
+            <div class="medium-8 columns comment">Lorem Ipsum dolor sit amet</div>
           </div>
         </div>
-        
-
       </div>
     </div>
 
