--- a/html/compare.html
+++ b/html/compare.html
@@ -25,16 +25,19 @@
           </ul>
           <section class="top-bar-section">
             <ul class="right">
-              <li class="active"><a href="#">Start</a></li>
-              <li><a href="#">Registrieren</a></li>
-              <li><a href="#">Login</a></li>
-              <li class="has-dropdown">
+              <li><a href="index.html">Start</a></li>
+              <li><a href="login.html">Login</a></li>
+              <li><a href="briefing.html">Briefing</a></li>
+              <li><a href="backend.html">Backend</a></li>
+              <li><a href="profile.html">Profile</a></li>
+              <li  class="active"><a href="compare.html">Compare</a></li>
+             <!--  <li class="has-dropdown">
                 <a href="#">Dropdown</a>
                 <ul class="dropdown">
                   <li><a href="#">Link</a></li>
                   <li><a href="#">Link</a></li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
           </section>
         </nav>
