--- a/html/profile.html
+++ b/html/profile.html
@@ -25,16 +25,19 @@
           </ul>
           <section class="top-bar-section">
             <ul class="right">
-              <li class="active"><a href="#">Start</a></li>
-              <li><a href="#">Registrieren</a></li>
-              <li><a href="#">Login</a></li>
-              <li class="has-dropdown">
+              <li><a href="index.html">Start</a></li>
+              <li><a href="login.html">Login</a></li>
+              <li><a href="briefing.html">Briefing</a></li>
+              <li><a href="backend.html">Backend</a></li>
+              <li class="active"><a href="profile.html">Profile</a></li>
+              <li><a href="compare.html">Compare</a></li>
+             <!--  <li class="has-dropdown">
                 <a href="#">Dropdown</a>
                 <ul class="dropdown">
                   <li><a href="#">Link</a></li>
                   <li><a href="#">Link</a></li>
                 </ul>
-              </li>
+              </li> -->
             </ul>
           </section>
         </nav>
@@ -60,6 +63,7 @@
             </div>
             <div id="description" class="medium-9 columns">
               Ich arbeite seit 2004 als professioneller Webdesigner und habe in der Vergangenheit bereits zahlreiche Kundenprojekte erfolgreich abgewickelt. Ich habe mich auf dier Anforderungen und Bedürfnisse von NeugründerInnen & JungunternehmerInnen spezialisiert. Ihre Website gestalten ich entsprechend der modernsten Standards. Benutzerfreundlichkeit, Browserkompatibilität, Suchmaschinenoptimierung und weitgehende Barrierefreiheit sind für mich  stehts selbstverständlich. 
+
             </div>
           </div>
 
