--- a/html/briefing.html
+++ b/html/briefing.html
@@ -25,20 +25,23 @@
             <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
           </ul>
 
-          <section class="top-bar-section">
-            <ul class="right">
-              <li class="active"><a href="#">Start</a></li>
-              <li><a href="#">Registrieren</a></li>
-              <li><a href="#">Login</a></li>
-              <li class="has-dropdown">
-                <a href="#">Dropdown</a>
-                <ul class="dropdown">
-                  <li><a href="#">Link</a></li>
-                  <li><a href="#">Link</a></li>
-                </ul>
-              </li>
+      <section class="top-bar-section">
+        <ul class="right">
+          <li><a href="index.html">Start</a></li>
+          <li><a href="login.html">Login</a></li>
+          <li class="active"><a href="briefing.html">Briefing</a></li>
+          <li><a href="backend.html">Backend</a></li>
+          <li><a href="profile.html">Profile</a></li>
+          <li><a href="compare.html">Compare</a></li>
+         <!--  <li class="has-dropdown">
+            <a href="#">Dropdown</a>
+            <ul class="dropdown">
+              <li><a href="#">Link</a></li>
+              <li><a href="#">Link</a></li>
             </ul>
-          </section>
+          </li> -->
+        </ul>
+      </section>
         </nav>
       </div>
     </header>
