Fixed W3C Validation Errors

--- a/html/index.html
+++ b/html/index.html
@@ -59,7 +59,7 @@
             <h2>KUNDEN</h2>
             <p>Definiere im online Konfigurator Schritt-für-Schritt die gewünschten Leistungen und übermittel automatisch ein detailliertes Briefing an alle im System registrierten Webworker.</p>
 
-            <p><span id="bullethead">Calculi hilft dir</span></p>
+            <p><span class="bullethead">Calculi hilft dir</span></p>
             <ul>
               <li><span>verschiedene Angebote zu vergleichen</span></li>
               <li><span>den optimalen Webdesigner zu finden</span></li>
@@ -71,7 +71,7 @@
             <p>
               Lege kostenlos dein persönliches Profil an und bewirb dich mit deinen individuellen Kostenvoranschlägen regelmäßig bei Projektausschreibungen verschiedener Kunden.</p>
            
-             <p><span id="bullethead">Calculi hilft dir</span></p>
+             <p><span class="bullethead">Calculi hilft dir</span></p>
             <ul>
               <li><span>neue Kunden zu akquirieren</span></li>
               <li><span>aussagekräftige Referenzen zu sammeln</span></li>
