--- a/html/login.html
+++ b/html/login.html
@@ -16,9 +16,9 @@
 
    <div id="login">
      <div class="row text-center">
-      <img src="img/logo_symbol.png" class="logo half-padding">
+      <img src="img/logo_symbol.png" class="logo half-padding" alt="logo">
       	<h1 class="padding-bottom">Login</h1>
-      	<form class="loginform" action="">
+      	<form class="loginform" action="POST">
       		<input type="text" placeholder="E-mail" />
       		<input type="password" placeholder="Passwort" />
       		<input type="submit" class="button expand padding-top" id="loginbutton" value="Login">
