--- a/html/compare.html
+++ b/html/compare.html
@@ -75,7 +75,7 @@
 				</div>
 
         <div class="sort padding-top">
-          <button class="sortbuttons"><a href="">1</a></button><button class="sortbuttons"><a href="">1</a></button><button class="sortbuttons"><a href="">1</a></button><button class="sortbuttons"><a href="">1</a></button>
+          <button class="sortbuttons">1</button><button class="sortbuttons">1<button class="sortbuttons">1</button><button class="sortbuttons">1</button>
         </div>
 
         <div class="item dark-bg yellow-border half-margin">
